2001-04-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ieee754/ldbl-96/e_asinl.c: Correct handling of +-Inf.
	* sysdeps/i386/fpu/e_asinl.S: Removed.  Too inaccurate.

	* login/tst-utmp.c: Make file usable again in tst-utmpx.c.

2001-04-04  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/aix/dl-libc.c: Don't use the ELF version,
	define simple replacements here.  Patch by Michael Keezer.

	* sysdeps/ieee754/ldbl-128/e_logl.c: New file.
	* sysdeps/ieee754/ldbl-96/e_asinl.c: New file.
	Contributed by Stephen L Moshier <moshier@mediaone.net>.

	* posix/fnmatch_loop.c: Undefine NEW_PATTERN when it is not used
	anymore.

2001-04-01  Andreas Jaeger  <aj@suse.de>

	* sysdeps/generic/s_nextafter.c (NO_LONG_DOUBLE): Add nexttowardl
	alias.

	* sysdeps/generic/s_fma.c (NO_LONG_DOUBLE): Add fmal alias.

2001-04-04  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/s390/s390-64/Dist: Add ucontext_i.h.
	* sysdeps/unix/sysv/linux/s390/s390-32/Dist: Likewise.

2001-04-04  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/getcontext.S: New file.
	* sysdeps/unix/sysv/linux/s390/s390-32/makecontext.c: New file.
	* sysdeps/unix/sysv/linux/s390/s390-32/setcontext.S: New file.
	* sysdeps/unix/sysv/linux/s390/s390-32/ucontext_i.h: New file.
	* sysdeps/unix/sysv/linux/s390/s390-64/getcontext.S: New file.
	* sysdeps/unix/sysv/linux/s390/s390-64/makecontext.c: New file.
	* sysdeps/unix/sysv/linux/s390/s390-64/setcontext.S: New file.
	* sysdeps/unix/sysv/linux/s390/s390-64/ucontext_i.h: New file.
	* sysdeps/unix/sysv/linux/s390/swapcontext.c: New file.

2001-04-04  Andreas Jaeger  <aj@suse.de>

	* sysdeps/powerpc/dl-machine.h (ELF_MACHINE_NO_REL): Move to right
	place.

2001-04-04  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/rpc_scan.c (symbols): Add entry for HYPER.
	* sunrpc/rpc_scan.h (enum tok_kind): Add TOK_HYPER.
	* sunrpc/rpc_parse.c (get_type): Handle TOK_HYPER.
	(unsigned_dec): Likewise.