@@ -1,3 +1,7 @@
+2001-04-05  Martin Schwidefsky  <schwidefsky@de.ibm.com>
+
+	* sysdeps/unix/sysv/linux/s390/s390-64/bits/socket.h: New file.
+
 2001-04-05  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/ieee754/ldbl-96/e_asinl.c: Correct handling of +-Inf.
